# test_task

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  seed.sql  task.txt
alembic/: env.py
alembic/versions/: f6f58b08ba9e_initial.py
src/: main.py
src/core/: config.py
src/db/: models.py  schemas.py  session.py
src/restfulapi/activities/: activities.py
src/restfulapi/buildings/: buildings.py
src/restfulapi/organizations/: organizations.py
