[tool.poetry]
name = "restfulapi"
version = "0.1.0"
description = ""
authors = ["<PLACEHOLDER_AUTHOR>"]
readme = "README.md"
packages = [{ include = "restfulapi", from = "src" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.115.6"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"